Make the option page slightly shorter to prevent having a scrollbar

--- a/lobby/static/sass/base.sass
+++ b/lobby/static/sass/base.sass
@@ -971,7 +971,7 @@ body:has(dialog[open])
 
 @media (min-width: 768px)
   #options-form
-    height: calc(100vh - 4em - 2px)
+    height: calc(100vh - 4.5em)
 
 @media (max-width: 768px)
   #options-form
